--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "git": "^0.1.5",
+    "rdf-namespaces": "^1.8.0",
     "register-service-worker": "^1.7.1",
+    "save": "^2.4.0",
     "solid-auth-client": "^2.5.0",
+    "tripledoc": "^4.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
