--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "solid-auth-client": "^2.5.0",
     "tripledoc": "^4.3.4",
     "vue": "^2.6.11",
+    "vue-beautiful-chat": "^2.5.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
