--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tripledoc": "^4.3.4",
     "vue": "^2.6.11",
     "vue-beautiful-chat": "^2.5.0",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
