--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "PoPock_Package",
-  "version": "0.1.11",
+  "name": "PoPock",
+  "version": "0.1.12",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
