--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PoPock",
-  "version": "0.1.39",
+  "version": "0.1.40",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -24,12 +24,14 @@
     "tripledoc": "^4.3.4",
     "vue": "^2.6.12",
     "vue-beautiful-chat": "^2.5.0",
+    "vue-i18n": "^8.21.0",
     "vue-infinite-scroll": "^2.0.2",
     "vue-native-notification": "^1.1.1",
     "vue-router": "^3.4.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.5.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-pwa": "~4.4.0",
@@ -43,6 +45,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "solid-file-client": "^1.0.5",
+    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12"
   }
 }
